# Echoes-of-Enigmatus-N1-hs

./: Echoes-of-enigmatus-hs.cabal  README.md
app/: Main.hs
app/Quest01/: Solve.hs
app/Quest01/input/: part1  part2  part3
app/Quest02/: Solve.hs
app/Quest02/input/: part1  part2  part3
app/Quest03/: Solve.hs
app/Quest03/input/: part1  part2  part3
