cabal-version:      2.4
name:               Echoes-of-enigmatus-hs
version:            0.1.0.0

license:            MIT
author:             Mykyta Cheshulko
maintainer:         chehhmann.nick@gmail.com

extra-source-files: CHANGELOG.md

executable Echoes-of-enigmatus-hs
    main-is:          Main.hs

    other-modules:    Quest01.Solve

    build-depends:    base ^>=4.16.4.0,
                      array,
                      containers,
                      regex-tdfa,
    hs-source-dirs:   app
    ghc-options:      -fno-ignore-asserts
    
    default-language: Haskell2010
